fix display issues on ios7, programmatically add 20px offset to html

--- a/assets/scss/mobile/_layouts.scss
+++ b/assets/scss/mobile/_layouts.scss
@@ -1,8 +1,4 @@
 
-html.iOS7 {
-    padding-top: 20px;
-}
-
 body {
 	background-color: $bodyBackground;
 }
